jsonapi_core/tests/compile_fail/invalid_type_name.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "-invalid")]
struct Bad {
    #[jsonapi(id)]
    id: String,
}

fn main() {}
